// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/atomic-component-health-check @coveo/create-atomic-component should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "On2XOtGKsiCQNf3sl4iW9KMVbUE=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "dk1NzEu4Fb2ZY6TKzt21xMFvc2c=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "bbdYNROey7BpL4ljYqwGCT0fvmE=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "mSEayrhdQLFyjWOgicX78wD8seE=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "TLrPzQ215bJQgHPDj+8uidPXAqo=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "DNTPZTeWJfCjTGqD+edK5gP5vUM=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "d+4crwhvhmk3uTFdgYBYbJ2l+Mk=",
              "name": "valid-component-name",
            },
          ],
          "hash": "UK5kq8wotHVWMNqU7KXP7nIGABE=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "bFh3SmB411lXkJIWZnTDWhG9rfI=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "tGVlR0ig5LSS79ZPOfuAFDEvqMw=",
              "name": "index.ts",
            },
          ],
          "hash": "qEEOwUr4MvYxD5CwMtkP/VqUL8Q=",
          "name": "pages",
        },
      ],
      "hash": "9EsyC1OG0PAyMZlaovii9Pwv/SI=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "lkbRMzkTrGk0ioTgAL5+0rXlUF4=",
  "name": "create-atomic-component",
}
`;

exports[`@coveo/atomic-component-health-check @coveo/create-atomic-result-component should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "On2XOtGKsiCQNf3sl4iW9KMVbUE=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "dk1NzEu4Fb2ZY6TKzt21xMFvc2c=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "cpQsaAkjitlm6A18xuQZvbp84p8=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "ShFXwot8XbCjD/A7x/1LQ0+hYI4=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "pFuu6S9wb+y09faE9Lxub6t+cfY=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "DNTPZTeWJfCjTGqD+edK5gP5vUM=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "mZWlt3okaKuKP9cgb9Lw9ihmdV4=",
              "name": "valid-component-name",
            },
          ],
          "hash": "zzpOJ/6edMH9stGcT90d2E2Qmus=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "bFh3SmB411lXkJIWZnTDWhG9rfI=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "tGVlR0ig5LSS79ZPOfuAFDEvqMw=",
              "name": "index.ts",
            },
          ],
          "hash": "qEEOwUr4MvYxD5CwMtkP/VqUL8Q=",
          "name": "pages",
        },
      ],
      "hash": "f0y835WchGmXpfLbxOZAhubmYtg=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "BFtGcq5PE8C7GK0mMsiTEEYFMkw=",
  "name": "create-atomic-result-component",
}
`;
